<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/dialog_musicitemmenu_play"
      android:icon="@drawable/ic_play"
      android:title="@string/play"/>
  <item
      android:id="@+id/dialog_musicitemmenu_playnext"
      android:icon="@drawable/ic_play"
      android:title="@string/nextplay"/>
  <item
      android:id="@+id/dialog_musicitemmenu_love"
      android:icon="@drawable/ic_love"
      android:title="@string/love"/>
  <item
      android:id="@+id/dialog_musicitemmenu_share"
      android:icon="@drawable/ic_share"
      android:title="@string/share"/>
  <item
      android:id="@+id/dialog_musicitemmenu_info"
      android:icon="@drawable/ic_info"
      android:title="@string/info"/>
  <item
      android:id="@+id/dialog_musicitemmenu_delete"
      android:icon="@drawable/ic_delete"
      android:title="@string/delete"/>

</menu>