<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group>
    <item
        android:id="@+id/popmenu_main_tool"
        android:icon="@drawable/ic_tool"
        android:title="@string/tool"/>
    <item
        android:id="@+id/popmenu_main_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"/>
  </group>
  <group>
    <item
        android:id="@+id/popmenu_main_about"
        android:icon="@drawable/ic_about"
        android:title="@string/about"/>
    <item
        android:id="@+id/popmenu_main_ptalk"
        android:icon="@drawable/ic_feedback"
        android:title="@string/ptalk"/>
  </group>
  <group>
    <item
        android:id="@+id/popmenu_main_exit"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"/>
  </group>
</menu>