<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <!--<PreferenceCategory android:title="分类一">
    <SwitchPreference
        android:icon="@drawable/ic_about"
        android:key="wifi"
        android:summaryOff="禁用"
        android:summaryOn="启用"
        android:title="WIFI"/>
    <CheckBoxPreference
        android:icon="@drawable/ic_back"
        android:key="wifi2"
        android:summaryOff="禁用"
        android:summaryOn="启用"
        android:title="WIFI2"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="分类二">
    <ListPreference
        android:entries="@array/update_rate"
        android:entryValues="@array/update_rate_value"
        android:key="update_rate"
        android:summary="默认"
        android:title="数据更新频率"/>
    <MultiSelectListPreference
        android:entries="@array/update_rate"
        android:entryValues="@array/update_rate_value"
        android:key="update_rate_muti"
        android:summary="默认"
        android:title="数据更新频率（多选）"/>
  </PreferenceCategory>-->
  <PreferenceCategory android:title="通用">
    <!--
    <EditTextPreference
        android:key="wifi_name"
        android:summary="默认值"
        android:title="WIFI Name"/>
     做简单显示，可以不指定key -->
    <Preference
        android:key="set_about"
        android:summary="@string/app_name"
        android:title="@string/about"/>
    <Preference
        android:enabled="true"
        android:key="set_checkupdate"
        android:selectable="true"
        android:summary="1.0"
        android:title="@string/checkupdatas"/>

  </PreferenceCategory>
</PreferenceScreen>