<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/timeout"
      android:textColor="@android:color/black"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="0.5dp"
      android:background="@color/linecolor"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:padding="10dp"
      android:text="@string/timeouthint"/>

  <SeekBar
      android:id="@+id/seekBar"
      android:layout_width="match_parent"
      android:progress="800"
      android:layout_height="wrap_content"
      android:max="9600"/>

  <TextView
      android:id="@+id/dialog_tool_timeout_show"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:padding="10dp"
      android:text="10"
      android:textSize="30sp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="right"
      android:orientation="horizontal">

    <Button
        android:id="@+id/dialog_tool_timeout_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="开始定时"
        />

    <Button
        android:id="@+id/dialog_tool_timeout_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        />

  </LinearLayout>

</LinearLayout>