<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
          <View
              android:layout_width="150dp"
              android:layout_height="0dp"/>

            <!-- 头像 -->
            <LinearLayout
              android:id="@+id/popmenu_main_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
              android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp">

                <ImageView
                    android:id="@+id/popmenu_main_headimg"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                  android:id="@+id/popmenu_main_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/defaultUserName"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <!-- 分割线 -->
            <View
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/linecolor" />

            <!-- 工具 -->
            <LinearLayout
              android:id="@+id/popmenu_main_tool"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?android:attr/selectableItemBackground"
              android:clickable="true"
              android:focusable="true"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingBottom="8dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="8dp">

                <ImageView
                  android:layout_width="28dp"
                  android:layout_height="28dp"
                  android:src="@drawable/ic_tool" />

                <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp"
                  android:text="@string/tool"
                  android:textColor="@android:color/black"
                  android:textSize="16sp" />

            </LinearLayout>

            <!-- 设置 -->
            <LinearLayout
              android:id="@+id/popmenu_main_setting"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?android:attr/selectableItemBackground"
              android:clickable="true"
              android:focusable="true"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingBottom="8dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="8dp">

                <ImageView
                  android:layout_width="28dp"
                  android:layout_height="28dp"
                  android:src="@drawable/ic_setting" />

                <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp"
                  android:text="@string/setting"
                  android:textColor="@android:color/black"
                  android:textSize="16sp" />

            </LinearLayout>

            <!-- 分割线 -->
            <View
              android:layout_width="match_parent"
              android:layout_height="0.7dp"
              android:background="@color/linecolor" />

            <!-- 关于 -->
            <LinearLayout
                android:id="@+id/popmenu_main_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/about"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <!-- 评价 -->
            <LinearLayout
              android:id="@+id/popmenu_main_ptalk"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="?android:attr/selectableItemBackground"
              android:clickable="true"
              android:focusable="true"
              android:gravity="center_vertical"
              android:orientation="horizontal"
              android:paddingBottom="8dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="8dp">

                <ImageView
                  android:layout_width="28dp"
                  android:layout_height="28dp"
                  android:src="@drawable/ic_feedback" />

                <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:layout_marginRight="10dp"
                  android:text="@string/ptalk"
                  android:textColor="@android:color/black"
                  android:textSize="16sp" />

            </LinearLayout>

            <!-- 分割线 -->
            <View
              android:layout_width="match_parent"
              android:layout_height="0.7dp"
              android:background="@color/linecolor" />

            <!-- 退出 -->
            <LinearLayout
              android:id="@+id/popmenu_main_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/ic_exit" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/exit"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>